--- a/closings.css
+++ b/closings.css
@@ -58,7 +58,7 @@ body {
 
 .nav-links a.contact {
     background-color: #000;
-    color: #e0cd67;
+    color: #e7bd6f;
     border: 2px solid #000;
 }
 
