--- a/about.css
+++ b/about.css
@@ -80,8 +80,13 @@ body {
 }
 
 .page-header h1 {
+    font-family: "Josefin Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 300;
+    font-style: normal;
     font-size: 2.5rem;
     margin-bottom: 1rem;
+    color: #e7bd6f;
 }
 
 .page-header p {
@@ -102,7 +107,7 @@ body {
 }
 
 .about-section h2 {
-    color: #2c3e50;
+    color: #000;
     margin-bottom: 1.5rem;
     font-size: 2rem;
 }
@@ -165,7 +170,7 @@ body {
     padding: 1.5rem;
     background-color: #000;
     border-radius: 8px;
-    border-left: 4px solid #3498db;
+    border-left: 4px solid #e7bd6f;
     transition: transform 0.3s ease;
 }
 
