--- a/admin.css
+++ b/admin.css
@@ -25,7 +25,7 @@ body {
 
 #loginForm {
     background: rgba(255, 255, 255, 0.18);
-    box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+    box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     backdrop-filter: blur(12px);
     -webkit-backdrop-filter: blur(12px);
     border-radius: 16px;
@@ -37,7 +37,7 @@ body {
 
 #loginForm h1 {
     text-align: center;
-    color: #2c3e50;
+    color: #e7bd6f;
     margin-bottom: 2rem;
 }
 
