--- a/admin.css
+++ b/admin.css
@@ -86,7 +86,7 @@ body {
 }
 
 #dashboardHeader {
-    background-color: #2c3e50;
+    background-color: #000;
     color: white;
     padding: 1rem 2rem;
     display: flex;
@@ -100,10 +100,10 @@ body {
 }
 
 #logoutBtn {
-    background-color: #e74c3c;
-    color: white;
+    background-color: #000;
+    color: #e7bd6f;
     padding: 0.5rem 1rem;
-    border: none;
+    border: #e7bd6f;
     border-radius: 4px;
     cursor: pointer;
     transition: background-color 0.3s ease;
