--- a/admin.css
+++ b/admin.css
@@ -110,7 +110,7 @@ body {
 }
 
 #logoutBtn:hover {
-    background-color: #c0392b;
+    background-color: gray;
 }
 
 #dashboardContent {
@@ -127,7 +127,7 @@ body {
 }
 
 #sectionTitle {
-    color: #2c3e50;
+    color: #000;
     font-size: 2rem;
 }
 
@@ -177,7 +177,7 @@ body {
 }
 
 #modalTitle {
-    color: #2c3e50;
+    color: #000;
     font-size: 1.5rem;
     font-weight: bold;
 }
