--- a/admin.css
+++ b/admin.css
@@ -37,7 +37,7 @@ body {
 
 #loginForm h1 {
     text-align: center;
-    color: #e7bd6f;
+    color: #000;
     margin-bottom: 2rem;
     font-family: 'josefin sans', sans-serif;
 }
@@ -49,7 +49,7 @@ body {
 .form-group label {
     display: block;
     margin-bottom: 0.5rem;
-    color: #e7bd6f;
+    color: #000;
     font-weight: 500;
     font-family: 'Cardo', serif;
 }
