--- a/admin.css
+++ b/admin.css
@@ -39,7 +39,6 @@ body {
     text-align: center;
     color: #000;
     margin-bottom: 2rem;
-    font-family: 'josefin sans', sans-serif;
 }
 
 .form-group {
@@ -51,7 +50,6 @@ body {
     margin-bottom: 0.5rem;
     color: #000;
     font-weight: 500;
-    font-family: 'Cardo', serif;
 }
 
 .form-group input {
@@ -64,7 +62,7 @@ body {
 
 #loginBtn {
     width: 100%;
-    background-color: #3498db;
+    background-color: #27ae60;
     color: white;
     padding: 1rem;
     border: none;
@@ -76,7 +74,7 @@ body {
 }
 
 #loginBtn:hover {
-    background-color: #2980b9;
+    background-color: #229954;
 }
 
 /* Dashboard Styles */
