--- a/team.css
+++ b/team.css
@@ -167,6 +167,13 @@ body {
     font-weight: bold;
 }
 
+.member-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
 .member-info {
     padding: 1.5rem;
 }
